--- a/sample/src/main/res/layout/app_bar_main.xml
+++ b/sample/src/main/res/layout/app_bar_main.xml
@@ -21,7 +21,8 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main" />
+    <include layout="@layout/content_main"
+        android:id="@+id/include2"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
