--- a/sample/src/main/res/layout/content_main.xml
+++ b/sample/src/main/res/layout/content_main.xml
@@ -14,6 +14,7 @@
 
     <TextView
         android:layout_width="wrap_content"
+        android:id="@+id/tv"
         android:layout_height="wrap_content"
         android:text="Hello World!" />
 </RelativeLayout>
